tenant specific create only endpoints
